deploy/kubernetes/components/ui/arches-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: arches-ui
  name: arches-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      component: arches-ui
  strategy: {}
  template:
    metadata:
      labels:
        component: arches-ui
    spec:
      containers:
        - image: us-east4-docker.pkg.dev/archesai/images/arches-ui
          name: arches-ui
          ports:
            - containerPort: 3000
          resources: {}
      hostname: ui-tcp
      restartPolicy: Always
