deploy/kubernetes/components/ui/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  selector:
    matchLabels:
      component: ui
  template:
    metadata:
      labels:
        component: ui
    spec:
      containers:
        - image: ui
          imagePullPolicy: IfNotPresent
          name: ui
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: '1Gi'
              cpu: '0.5'
            limits:
              memory: '2Gi'
              cpu: '1'
