deploy/kubernetes/components/ui/arches-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: arches-ui
  name: arches-ui
spec:
  ports:
    - name: "arches-ui-port"
      port: 443
      targetPort: 3000
  selector:
    component: arches-ui
