deploy/kubernetes/components/ui/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  ports:
    - port: 443
      targetPort: 3000
  selector:
    component: ui
