deploy/kubernetes/components/ui/arches-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arches-ui-ingress
spec:
  rules:
    - host: platform.archesai.test
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: arches-ui
                port:
                  number: 443
